--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,53 @@ a:hover {
     text-decoration: none;
 }
 
+ul {
+    list-style: none;
+}
+
 p {
     text-align: justify;
+}
+
+nav {
+    height: 100vh;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, .25),
+        0 10px 10px rgba(0, 0, 0, .22) !important;
+}
+
+main {
+    padding: 0 !important;
+    overflow-x: hidden;
+}
+
+.brand-logo {
+    max-height: 100px;
+    object-fit: cover;
+}
+
+.mini-logo {
+    max-height: 120px;
+    object-fit: cover;
+}
+
+#social-nav {
+    align-items: flex-end;
+}
+
+footer {
+    border-top: 4px solid;
+    box-shadow: 0 -10px 28px rgba(0, 0, 0, .22),
+        0 -7px 20px rgba(0, 0, 0, .2) !important;
+}
+
+.title {
+    text-transform: uppercase;
+    margin-bottom: 40px;
+}
+
+.subtitle {
+    text-transform: uppercase;
+    letter-spacing: 4px;
 }
 
 .btn-edit i {
@@ -41,6 +86,12 @@ p {
     z-index: 9;
 }
 
+#carousel-landing img {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+}
+
 #preview {
     margin: 2px;
 }
@@ -51,44 +102,18 @@ p {
     object-fit: cover;
 }
 
-#carousel-landing img {
-    height: 100vh;
+.carousel-product img {
+    border-bottom: 4px solid;
+}
+
+.carousel-product img {
     width: 100%;
-    background-color: red;
+    height: 50vh;
     object-fit: cover;
-}
-
-nav {
-    height: 100vh;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, .25),
-        0 10px 10px rgba(0, 0, 0, .22) !important;
-}
-
-main {
-    padding: 0 !important;
-    overflow-x: hidden;
-}
-
-#social-nav {
-    align-items: flex-end;
-}
-
-ul {
-    list-style: none;
 }
 
 .img-side {
     min-height: 450px;
-    object-fit: cover;
-}
-
-.brand-logo {
-    max-height: 100px;
-    object-fit: cover;
-}
-
-.mini-logo {
-    max-height: 120px;
     object-fit: cover;
 }
 
@@ -116,8 +141,8 @@ ul {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100px;
-    height: 100px;
+    width: 95px;
+    height: 95px;
     display: table;
     text-align: center;
     -webkit-border-radius: 10px;
@@ -129,15 +154,32 @@ ul {
 .service-icons i {
     display: table-cell;
     vertical-align: middle;
-    height: 100px;
+    height: 95px;
 }
 
 .service-text {
-    margin: 28px 0;
+    margin: 30px 0;
 }
 
 .container {
     padding: 30px;
+}
+
+#map {
+    border-top: 4px solid;
+    height: 504px;
+}
+
+#map iframe {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 500px;
+}
+
+.card-custom {
+    width: 300px;
+    height: 300px;
 }
 
 @media screen and (min-width:1600px) {
@@ -157,7 +199,6 @@ ul {
         max-height: 80px;
     }
 
-    a,
     span,
     li,
     .btn {
