--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,7 @@ main {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
+  padding: 40px;
   background-color: #f5f5f5;
 }
 
@@ -107,5 +108,11 @@ main {
 
   .form-label-group input:-ms-input-placeholder {
     color: #777;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .form-signin {
+    margin: 20px;
   }
 }
